more loc changes

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -959,6 +959,14 @@ l_english:
 		mod_job_tec_chemical_baron_per_pop_short:0 "\n§G+1§! £mod_job_tec_chemical_baron_add£ per $VALUE$ £pop£"
 		mod_job_tec_chemical_baron_add:0 "$job_tec_chemical_baron$ Jobs"
 
+		job_tec_chemical_drone:0 "Chemical Baron"
+		job_tec_chemical_drone_plural:0 "Chemical Barons"
+		job_tec_chemical_drone_desc:0 "An elite of economically and property-wise rich myriad of crime-lords, bored aristocrats, self-nominated taskmasters and business tycoons, who control the creation, transport and distribution of highly addictive drugs and chemicals to subdue the population... and themselves."
+		job_tec_chemical_drone_effect_desc:0 "£job_tec_chemical_drone£ $job_tec_chemical_drone_plural$ TO DO."
+		mod_job_tec_chemical_drone_per_pop:0 "§G+1§! $job_tec_chemical_drone$ Job Per $VALUE$ Pops"
+		mod_job_tec_chemical_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_chemical_drone_add£ per $VALUE$ £pop£"
+		mod_job_tec_chemical_drone_add:0 "$job_tec_chemical_drone$ Jobs"
+
 		building_tec_chemical_baron_generic:0 "Chem-dustrial Hideout"
 		building_tec_chemical_baron_generic_plural:0 "Chem-dustrial Hideouts"
 		building_tec_chemical_baron_generic_desc:0 "TO DO"
@@ -984,9 +992,35 @@ l_english:
 
 		building_tec_chemical_baron_zro:0 "Chem-Dust Facility"
 		building_tec_chemical_baron_zro_plural:0 "Chem-Dust Facilities"
-		building_tec_chemical_baron_zro_desc:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerfun concoction that satisfies even the most sybarite."
-		building_tec_chemical_baron_zro_desc_hive:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerfun concoction that greatly amplifies the drone-hivemind connection."
+		building_tec_chemical_baron_zro_desc:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerful concoction that satisfies even the most sybarite."
+		building_tec_chemical_baron_zro_desc_hive:0 "When it comes to refining psionic residuum, these facilities remix Zro with other addictive elements to create a powerful concoction that greatly amplifies the drone-hivemind connection."
 		building_tec_chemical_baron_zro_effect:0 "TO DO"
+
+
+		building_tec_chemical_baron_generic_biohive:0 "Chem-Growth"
+		building_tec_chemical_baron_generic_biohive_plural:0 "Chemical Growths"
+		building_tec_chemical_baron_generic_biohive_desc:0 "TO DO"
+		building_tec_chemical_baron_generic_biohive_effect:0 ""
+
+		building_tec_chemical_baron_motes_biohive:0 "Chem-plosive Tumor"
+		building_tec_chemical_baron_motes_biohive_plural:0 "Chem-plosive Tumors"
+		building_tec_chemical_baron_motes_biohive_desc:0 "A"
+		building_tec_chemical_baron_motes_biohive_effect:0 "TO DO"
+
+		building_tec_chemical_baron_crystals_biohive:0 "Chem-Cristallized Outgrowth"
+		building_tec_chemical_baron_crystals_biohive_plural:0 "Chem-Cristallized Outgrowths"
+		building_tec_chemical_baron_crystals_biohive_desc:0 "A."
+		building_tec_chemical_baron_crystals_biohive_effect:0 "TO DO"
+
+		building_tec_chemical_baron_gases_biohive:0 "Chem-Gas Organ"
+		building_tec_chemical_baron_gases_biohive_plural:0 "Chem-Gas Organs"
+		building_tec_chemical_baron_gases_biohive_desc:0 "TO DO."
+		building_tec_chemical_baron_gases_biohive_effect:0 "TO DO"
+
+		building_tec_chemical_baron_zro_biohive:0 "Chem-Dust Gland"
+		building_tec_chemical_baron_zro_biohive_plural:0 "Chem-Dust Glands"
+		building_tec_chemical_baron_zro_biohive_desc:0 "A."
+		building_tec_chemical_baron_zro_biohive_effect:0 "TO DO"
 
 	# /
 
@@ -2558,47 +2592,118 @@ l_english:
 	building_tec_strategic_optimizator_hive_mind:0 "Refinery Coordination Center"
 	building_tec_strategic_optimizator_desc_hive_mind:0 "A vast facility which centralizes and coordinates the production of strategic resources across the entire planet.\n\n"
  # /
- # ------------------------------------------------- Living metal production
-	building_tec_livingmetal_forge:0 "Living Metal Farm"
-	building_tec_livingmetal_forge_desc:0 "Scientific installations where living metal is ''farmed and harvested'', if a continuous process of trial, error, energetic infusion and technical engineering processes could be understood as such."
+ # ------------------------------------------------- Living metal buildings
+	# Production
+		building_tec_livingmetal_forge:0 "Living Metal Farm"
+		building_tec_livingmetal_forge_desc:0 "Scientific installations where living metal is ''farmed and harvested'', if a continuous process of trial, error, energetic infusion and technical engineering processes could be understood as such."
+	# /
+	# T4
+		# Shared
+		mod_building_tec_living_metal_production_affinity:0 "§HSentient Production§!\nThis $tec_loc_building$ §YAmplify§! the effects of other $tec_loc_living_metal$ buildings"
+		# Energy
+
+		# Minerals
+
+		# Food
+
+		# Alloys
+
+		# CG
+
+		# Research
+
+		# Others
+
+	# /
  # /
- # ------------------------------------------------- Nanite production
-	building_tec_nanite_forge:0 "Nanorreplicator"
-	building_tec_nanite_forge_desc:0 "Semi Self-sufficient structures serving as production lines of contained nanobots, created in batches with advanced technology and resources."
+ # ------------------------------------------------- Nanite buildings
+	# Production
+		building_tec_nanite_forge:0 "Nanorreplicator"
+		building_tec_nanite_forge_desc:0 "Semi Self-sufficient structures serving as production lines of contained nanobots, created in batches with advanced technology and resources."
 
-	building_tec_nanite_transmuter:0 "Nanite Complex"
-	building_tec_nanite_transmuter_desc:0 "A technological advanced laboratory where new and old blueprints of nanites are researched and replicated to create valuable nanobots."
-	building_tec_nanite_transmuter_2:0 "Nanite Avanced Complex"
-	building_tec_nanite_transmuter_2_desc:0 "A highly technological laboratory where state of the art blueprints of nanites are researched and replicated to create highly efficient nanobots."
-	building_tec_nanite_transmuter_3:0 "Nanite Planetary Complex"
-	building_tec_nanite_transmuter_3_desc:0 "This highly advanced research complex host various strands of nanites and very advanced nanobots, which uses are plenty and incredibly powerful. Experts maintain the installations and secure the new knowledge."
+		building_tec_nanite_transmuter:0 "Nanite Complex"
+		building_tec_nanite_transmuter_desc:0 "A technological advanced laboratory where new and old blueprints of nanites are researched and replicated to create valuable nanobots."
+		building_tec_nanite_transmuter_2:0 "Nanite Avanced Complex"
+		building_tec_nanite_transmuter_2_desc:0 "A highly technological laboratory where state of the art blueprints of nanites are researched and replicated to create highly efficient nanobots."
+		building_tec_nanite_transmuter_3:0 "Nanite Planetary Complex"
+		building_tec_nanite_transmuter_3_desc:0 "This highly advanced research complex host various strands of nanites and very advanced nanobots, which uses are plenty and incredibly powerful. Experts maintain the installations and secure the new knowledge."
 
-	job_tec_nanite_researcher:0 "Nanoresearcher"
-	job_tec_nanite_researcher_plural:0 "Nanoresearchers"
-	job_tec_nanite_researcher_desc:0 "Highly specialized researchers who focus on discovering new ways of using and producing valuable nanites."
-	job_tec_nanite_researcher_effect_desc:0 "£job_tec_nanite_researcher£ $job_tec_nanite_researcher_plural$ transform £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources into £engineering£ Research and £nanites£ Nanites"
-	job_tec_nanite_researcher_effect_invert_desc:0 "£job_tec_nanite_researcher£ $job_tec_nanite_researcher_plural$ transform £nanites£ Nanites into £engineering£ Research and £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources"
-	mod_job_tec_nanite_researcher_add:0 "$job_tec_nanite_researcher$ Jobs"
-	mod_job_tec_nanite_researcher_per_pop:0 "§G+1§! $job_tec_nanite_researcher$ Job Per $VALUE$ Pops"
-	mod_job_tec_nanite_researcher_per_pop_short:0 "\n§G+1§! £mod_job_tec_nanite_researcher_add£ per $VALUE$ £pop£"
+		job_tec_nanite_researcher:0 "Nanoresearcher"
+		job_tec_nanite_researcher_plural:0 "Nanoresearchers"
+		job_tec_nanite_researcher_desc:0 "Highly specialized researchers who focus on discovering new ways of using and producing valuable nanites."
+		job_tec_nanite_researcher_effect_desc:0 "£job_tec_nanite_researcher£ $job_tec_nanite_researcher_plural$ transform £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources into £engineering£ Research and £nanites£ Nanites"
+		job_tec_nanite_researcher_effect_invert_desc:0 "£job_tec_nanite_researcher£ $job_tec_nanite_researcher_plural$ transform £nanites£ Nanites into £engineering£ Research and £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources"
+		mod_job_tec_nanite_researcher_add:0 "$job_tec_nanite_researcher$ Jobs"
+		mod_job_tec_nanite_researcher_per_pop:0 "§G+1§! $job_tec_nanite_researcher$ Job Per $VALUE$ Pops"
+		mod_job_tec_nanite_researcher_per_pop_short:0 "\n§G+1§! £mod_job_tec_nanite_researcher_add£ per $VALUE$ £pop£"
 
-	job_tec_nanite_researcher_drone:0 "Nanoresearcher Drone"
-	job_tec_nanite_researcher_drone_plural:0 "Nanoresearcher Drones"
-	job_tec_nanite_researcher_drone_desc:0 "Highly specialized drones, specially assigned to the development and discovery of new ways of using and producing valuable nanites."
-	job_tec_nanite_researcher_drone_effect_desc:0 "£job_tec_nanite_researcher_drone£ $job_tec_nanite_researcher_drone_plural$ transform £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources into £engineering£ Research and £nanites£ Nanites"
-	job_tec_nanite_researcher_drone_effect_invert_desc:0 "£job_tec_nanite_researcher_drone£ $job_tec_nanite_researcher_drone_plural$ transform £nanites£ Nanites into £engineering£ Research and £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources"
-	mod_job_tec_nanite_researcher_drone_add:0 "$job_tec_nanite_researcher_drone$ Jobs"
-	mod_job_tec_nanite_researcher_drone_per_pop:0 "§G+1§! $job_tec_nanite_researcher_drone$ Job Per $VALUE$ Pops"
-	mod_job_tec_nanite_researcher_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_nanite_researcher_add£ per $VALUE$ £pop£"
+		job_tec_nanite_researcher_drone:0 "Nanoresearcher Drone"
+		job_tec_nanite_researcher_drone_plural:0 "Nanoresearcher Drones"
+		job_tec_nanite_researcher_drone_desc:0 "Highly specialized drones, specially assigned to the development and discovery of new ways of using and producing valuable nanites."
+		job_tec_nanite_researcher_drone_effect_desc:0 "£job_tec_nanite_researcher_drone£ $job_tec_nanite_researcher_drone_plural$ transform £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources into £engineering£ Research and £nanites£ Nanites"
+		job_tec_nanite_researcher_drone_effect_invert_desc:0 "£job_tec_nanite_researcher_drone£ $job_tec_nanite_researcher_drone_plural$ transform £nanites£ Nanites into £engineering£ Research and £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources"
+		mod_job_tec_nanite_researcher_drone_add:0 "$job_tec_nanite_researcher_drone$ Jobs"
+		mod_job_tec_nanite_researcher_drone_per_pop:0 "§G+1§! $job_tec_nanite_researcher_drone$ Job Per $VALUE$ Pops"
+		mod_job_tec_nanite_researcher_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_nanite_researcher_add£ per $VALUE$ £pop£"
 
-	job_tec_miniaturizer_drone:0 "Miniaturizer"
-	job_tec_miniaturizer_drone_plural:0 "Miniaturizer"
-	job_tec_miniaturizer_drone_desc:0 "A high degree of nanominiaturization requires the best of any drone the machine intelligence can offer, and so these units are equiped to suit that purpose with the maximum efficiency."
-	job_tec_miniaturizer_drone_effect_desc:0 "£job_tec_miniaturizer_drone£ $job_tec_miniaturizer_drone_plural$ transform £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources into £engineering£ Research and £nanites£ Nanites"
-	job_tec_miniaturizer_drone_effect_invert_desc:0 "£job_tec_miniaturizer_drone£ $job_tec_miniaturizer_drone_plural$ transform £nanites£ Nanites into £engineering£ Research and £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources"
-	mod_job_tec_miniaturizer_drone_add:0 "$job_tec_miniaturizer_drone$ Jobs"
-	mod_job_tec_miniaturizer_drone_per_pop:0 "§G+1§! $job_tec_miniaturizer_drone$ Job Per $VALUE$ Pops"
-	mod_job_tec_miniaturizer_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_miniaturizer_drone_add£ per $VALUE$ £pop£"
+		job_tec_miniaturizer_drone:0 "Miniaturizer"
+		job_tec_miniaturizer_drone_plural:0 "Miniaturizer"
+		job_tec_miniaturizer_drone_desc:0 "A high degree of nanominiaturization requires the best of any drone the machine intelligence can offer, and so these units are equiped to suit that purpose with the maximum efficiency."
+		job_tec_miniaturizer_drone_effect_desc:0 "£job_tec_miniaturizer_drone£ $job_tec_miniaturizer_drone_plural$ transform £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources into £engineering£ Research and £nanites£ Nanites"
+		job_tec_miniaturizer_drone_effect_invert_desc:0 "£job_tec_miniaturizer_drone£ $job_tec_miniaturizer_drone_plural$ transform £nanites£ Nanites into £engineering£ Research and £volatile_motes£ £exotic_gases£ £rare_crystals£ Strategic resources"
+		mod_job_tec_miniaturizer_drone_add:0 "$job_tec_miniaturizer_drone$ Jobs"
+		mod_job_tec_miniaturizer_drone_per_pop:0 "§G+1§! $job_tec_miniaturizer_drone$ Job Per $VALUE$ Pops"
+		mod_job_tec_miniaturizer_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_miniaturizer_drone_add£ per $VALUE$ £pop£"
+	# /
+	# T4
+		# Shared
+		mod_building_tec_nanite_production_affinity:0 "§HImproved Self-Replication§!\nThis $tec_loc_building$ §YIncreases§! the production of other $tec_loc_nanites$ buildings"
+		# Energy
+
+		# Minerals
+
+		# Food
+
+		# Alloys
+
+		# CG
+
+		# Research
+
+		# Others
+
+	# /
+ # /
+ # ------------------------------------------------- Zro Buildings
+	# Production
+		
+	# /
+	# T4
+		# Shared
+		mod_building_tec_zro_production_affinity:0 "§HInfused Production§!\nThis $tec_loc_building$ provides extra effects §YAmplified§! by other $tec_loc_zro$ buildings, but also its §RUpkeep§!"
+		# Energy
+
+		# Minerals
+
+		# Food
+
+		# Alloys
+
+		# CG
+
+		# Research
+
+		# Others
+
+	# /
+ # /
+ # ------------------------------------------------- Dark Matter Buildings
+	# Production
+		
+	# /
+	# T4
+
+	# /
  # /
  # ------------------------------------------------- Terraform
 	building_terraformer:0 "Terraform complex"
