--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -66,6 +66,9 @@
 	tec_loc_minor_artifacts:0 "£minor_artifacts£ $minor_artifacts$"
 
 	tec_loc_strategic_resources: "£trigger_tec_rare_resources£ Strategic Resources"
+
+	tec_loc_living_metal:0 "£sr_living_metal£ $sr_living_metal$"
+	tec_loc_nanites:0 "£nanites£ $nanites$"
 	tec_loc_zro: "£sr_zro£ $sr_zro$"
 
  # Fake resource locs
