habitat prod nerfs + loc changes

--- a/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
+++ b/localisation/english/replace/zz_evolved_planets_modifiers_l_english.yml
@@ -1,5 +1,14 @@
 ﻿l_english:
 
+# Name conventionalisms
+	# Country modifiers							modifier_tec
+	# Planet modifiers							pm_tec_x
+	# Pop modifiers									pop_modifier_tec_
+	# Fleet modifier								fleet_modifier_tec_
+	# Starbase modifier							sb_modifier_tec_
+	# Ship modifier									ship_modifier_tec_
+
+
 # ------------------------------------------------------------
 # MISC
 # ------------------------------------------------------------
