faction & ticket fixes

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -18,7 +18,7 @@
 # /
 
 # Vanilla loc overwrites
-	councilor_anglers_custom_modifier_desc:0 "- $tec_loc_food$ from £job_angler£ $job_angler_plural$: §G+$@councilor_anglers_angler_food_bonus$§!\n$tec_loc_consumer_goods$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_anglers_pearl_diver_consumer_goods_bonus$§!"
+	councilor_anglers_custom_modifier_desc:0 "- $tec_loc_food$ (or £minerals£) from £job_angler£ $job_angler_plural$: §G+$@councilor_anglers_angler_food_bonus$§!\n$tec_loc_consumer_goods$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_anglers_pearl_diver_consumer_goods_bonus$§!"
 	councilor_barbaric_despoilers_custom_modifier_desc:0 "- £empire_sprawl£ $EMPIRE_SIZE$ from $mod_base_pop_category_slave$: §G-2%§!"
 	councilor_corporate_anglers_custom_modifier_desc:0 "- $tec_loc_trade_value$ from £job_angler£ $job_angler_plural$: §G+$@councilor_corporate_anglers_angler_trade_value_bonus$§!\n$tec_loc_trade_value$ from £job_pearl_diver£ $job_pearl_diver_plural$: §G+$@councilor_corporate_anglers_pearl_diver_trade_value_bonus$§!"
 	councilor_corporate_hedonism_custom_modifier_desc:0 "- $mod_planet_entertainers_trade_value_produces_add$: §G+$@councilor_corporate_hedonism_entertainer_trade_value$§!"
@@ -207,12 +207,12 @@
 		councilor_civic_tec_regular_netrunners:0 "Net-Warden"
 		councilor_civic_tec_regular_netrunners_female:0 "$councilor_civic_tec_regular_netrunners$"
 		councilor_civic_tec_regular_netrunners_desc:0 "The $TITLE$s control and improve the operations of netrunners on the entire empire."
-		councilor_civic_tec_regular_netrunners_custom_modifier:0 "- Netrunner Output per Active Spy Network: §G+10%§!"
+		councilor_civic_tec_regular_netrunners_custom_modifier:0 "- Netrunner Output per Active Spy Network: §G+5%§!\n- $tec_loc_codebreaking$: §G+0.2§!"
 
 		councilor_civic_tec_corporate_netrunners:0 "Net-Warden"
 		councilor_civic_tec_corporate_netrunners_female:0 "$councilor_civic_tec_regular_netrunners$"
 		councilor_civic_tec_corporate_netrunners_desc:0 "The $TITLE$s control and improve the operations of netrunners on the entire empire."
-		councilor_civic_tec_corporate_netrunners_custom_modifier:0 "- Netrunner Output per Active Spy Network: §G+10%§!"
+		councilor_civic_tec_corporate_netrunners_custom_modifier:0 "- Netrunner Output per Active Spy Network: §G+5%§!\n- $tec_loc_codebreaking$: §G+0.2§!"
 
 		councilor_civic_tec_regular_machine_cult:0 "Fabricator-Logis"
 		councilor_civic_tec_regular_machine_cult_female:0 "$councilor_civic_tec_regular_machine_cult$"
@@ -517,12 +517,12 @@
 		councilor_civic_tec_regular_computerized_extraction:0 "Extraction Foreman"
 		councilor_civic_tec_regular_computerized_extraction_female:0 "Extraction Forewoman"
 		councilor_civic_tec_regular_computerized_extraction_desc:0 "The $TITLE$ oversees automated tasks of resource extractions and processing."
-		councilor_civic_tec_regular_computerized_extraction_custom_modifier:0 "- $civic_tec_regular_computerized_extraction$ $tec_loc_district$ Output: §G+10%§!"
+		councilor_civic_tec_regular_computerized_extraction_custom_modifier:0 "- $civic_tec_regular_computerized_extraction$ $tec_loc_district$ Output: §G+15%§!"
 
 		councilor_civic_tec_regular_unleashed_industrialization:0 "Industrial Arbiter"
 		councilor_civic_tec_regular_unleashed_industrialization_female:0 "$councilor_civic_tec_regular_unleashed_industrialization$"
 		councilor_civic_tec_regular_unleashed_industrialization_desc:0 "The $TITLE$ has the task of optimizing the production processes of industrialization and productive development."
-		councilor_civic_tec_regular_unleashed_industrialization_custom_modifier:0 "- $civic_tec_regular_unleashed_industrialization$ $tec_loc_district$ Output: §G+10%§!"
+		councilor_civic_tec_regular_unleashed_industrialization_custom_modifier:0 "- $civic_tec_regular_unleashed_industrialization$ $tec_loc_district$ Output: §G+15%§!"
 
 	# /
  # /
