--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -217,9 +217,9 @@
 # TECH replaces
 # ------------------------------------------------------------
 	# "Max upgraded Capital Buildings:\n $mod_planet_jobs_produces_mult$: §G+20%§!\n Max £district£ Districts: §R+10%§!"
- tech_capital_productivity_1_effect:0 "Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+5%§!\n $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+5%§!"
- tech_capital_productivity_2_effect:0 "Upgraded Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+10%§!\n  $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+10%§!"
- tech_capital_productivity_3_effect:0 "Major Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+30%§!\n  $MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+15%§!"
+ tech_capital_productivity_1_effect:0 "Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+5%§!\n $MOD_PLANETARY_ASCENSION_COST_MULT$: §G-5%§!"
+ tech_capital_productivity_2_effect:0 "Upgraded Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+10%§!\n  $MOD_PLANETARY_ASCENSION_COST_MULT$: §G-10%§!"
+ tech_capital_productivity_3_effect:0 "Major Capital Buildings:\n  $mod_planet_jobs_produces_mult$: §G+30%§!\n  $MOD_PLANETARY_ASCENSION_COST_MULT$: §G-15%§!"
 
 
 # EVENT replaces and additions
