--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -69,7 +69,10 @@
 
 	tec_loc_living_metal:0 "£sr_living_metal£ $sr_living_metal$"
 	tec_loc_nanites:0 "£nanites£ $nanites$"
-	tec_loc_zro: "£sr_zro£ $sr_zro$"
+	tec_loc_zro:0 "£sr_zro£ $sr_zro$"
+
+	tec_loc_codebreaking:0 "$MOD_INTEL_DECRYPTION_ADD$"
+	tec_loc_encryption:0 "$MOD_INTEL_ENCRYPTION_ADD$"
 
  # Fake resource locs
 	tec_loc_housing: "£housing£ $PLANET_HOUSING_TITLE$"
