--- a/localisation/english/zz_evolved_factions_l_english.yml
+++ b/localisation/english/zz_evolved_factions_l_english.yml
@@ -286,7 +286,7 @@
 	TEC_FAC_MAT_WRONG_RESEARCH_LEADER_DESC:0 "Having any leader of the incorrect §Yresearch category§!, or without traits that naturally boost that research field or overall research, leading a type of research will §Rdisplease§! the [Root.GetName]."
 
 	TEC_FAC_MAT_NO_SYNTH_ENVY:0 "Synth Envy"
-	TEC_FAC_MAT__SYNTH_ENVY:0 "Synth Envy"
+	TEC_FAC_MAT_SYNTH_ENVY:0 "Synth Envy"
 	TEC_FAC_MAT_NO_SYNTH_ENVY_DESC:0 "Seeing other empires parade any kind of §YRobotic Pops§! around - with no domestic equivalents on any of our worlds - is sure to §Rdisplease§! the [Root.GetName]."
 
 	TEC_FAC_MAT_OVERADMINCAP:0 "Bad Management"
@@ -630,10 +630,10 @@
 
 	TEC_FAC_PLU_DISTRIBUTEDGOODS2:0 "Distributed Goods"
 	TEC_FAC_PLU_NO_DISTRIBUTEDGOODS2:0 "Equality of Opportunities"
-	TEC_FAC_PLU_DISTRIBUTEDGOODS2_DESC:0 "Active §YDistributing Goods§! decision among at least §G3§! of our planets will §Gplease§! the [Root.GetName]."
+	TEC_FAC_PLU_DISTRIBUTEDGOODS2_DESC:0 "Active §YDistributing Goods§! decision among at least §G5§! of our planets will §Gplease§! the [Root.GetName]."
 	TEC_FAC_PLU_DISTRIBUTEDGOODS3:0 "Shared Goods"
 	TEC_FAC_PLU_NO_DISTRIBUTEDGOODS3:0 "Shared Goods"
-	TEC_FAC_PLU_DISTRIBUTEDGOODS3_DESC:0 "Active §YDistributing Goods§! decision among at least §G5§! of our planets will §Ggreatly please§! the [Root.GetName]."
+	TEC_FAC_PLU_DISTRIBUTEDGOODS3_DESC:0 "Active §YDistributing Goods§! decision among at least §G10§! of our planets will §Ggreatly please§! the [Root.GetName]."
 	TEC_FAC_PLU_EQUALITY:0 "Equality of Opportunities"
 	TEC_FAC_PLU_NO_EQUALITY:0 "Equality of Opportunities"
 	TEC_FAC_PLU_EQUALITY_DESC:0 "Having an active §YEquality of Opportunities§! edict §Gplease§! the [Root.GetName]."
