Hydrological extractor desiccation cost fix, protoworld double vd colonization fix, hydro zone reduce sdistricts given on hab

--- a/localisation/english/zz_evolved_modifiers_l_english.yml
+++ b/localisation/english/zz_evolved_modifiers_l_english.yml
@@ -616,3 +616,7 @@
  divine_algorithm_trader_gestalt:0 "$divine_algorithm$"
  divine_algorithm_trader_gestalt_desc:0 "$divine_algorithm_desc$"
 
+ pm_tec_desiccated_planet: "Desiccated Planet"
+ pm_tec_desiccated_planet_desc: "This planet was subject of a sudden and radical hydrological change, removing most of its water, in the past. Making it considerably harder to terraform."
+ pm_tec_desiccated_planet_tooltip:0 "Once we have researched the £society£ §Y$tech_climate_restoration$§! technology, we will be able to restore this planet into a habitable world with some difficulty and extra cost.\n\n"
+ tec_machine_anglers_cannot_restore_desiccated: "$civic_tec_machine_anglers$ cannot restore planets they have desiccated"
